ManagedServiceProvider/Kubernetes-Deployment/coupons-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coupon-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: couponservice
  template:
    metadata:
      labels:
        app: couponservice
    spec:
      containers:
        - name: couponservice
          image: hasnanivishal/msp.coupon:latest

---
apiVersion: v1
kind: Service
metadata:
  name: coupon-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: couponservice
  ports:
    - name: couponservice
      protocol: TCP
      port: 80
      targetPort: 80
    - name: coupongrpcservice
      protocol: TCP
      port: 666
      targetPort: 666

---
# apiVersion: v1
# kind: Service
# metadata:
#   name: couponservice-srv
# spec:
#   type: NodePort
#   selector:
#     app: couponservice
#   ports:
#     - name: couponservice
#       protocol: TCP
#       port: 80
#       targetPort: 80
#     - name: coupongrpcservice
#       protocol: TCP
#       port: 666
#       targetPort: 666
