ManagedServiceProvider/Kubernetes-Deployment/orders-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderservice
  template:
    metadata:
      labels:
        app: orderservice
    spec:
      containers:
        - name: orderservice
          image: hasnanivishal/msp.order:latest

---
apiVersion: v1
kind: Service
metadata:
  name: order-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: orderservice
  ports:
  - name: orderservice
    protocol: TCP
    port: 8080
    targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: orderservice-srv
spec:
  type: NodePort
  selector:
    app: orderservice
  ports:
    - name: orderservice
      protocol: TCP
      port: 8080
      targetPort: 8080
