ManagedServiceProvider/Kubernetes-Deployment/profiles-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profileservice
  template:
    metadata:
      labels:
        app: profileservice
    spec:
      containers:
        - name: profileservice
          image: hasnanivishal/msp.profile:latest
---
apiVersion: v1
kind: Service
metadata:
  name: profile-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: profileservice
  ports:
  - name: profileservice
    protocol: TCP
    port: 8080
    targetPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  name: profileservice-srv
spec:
  type: NodePort
  selector:
    app: profileservice
  ports:
    - name: profileservice
      protocol: TCP
      port: 8080
      targetPort: 8080
