ManagedServiceProvider/Kubernetes-Deployment/subscriptions-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: subscription-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: subscriptionservice
  template:
    metadata:
      labels:
        app: subscriptionservice
    spec:
      containers:
        - name: subscriptionservice
          image: hasnanivishal/msp.subscription:latest

---
apiVersion: v1
kind: Service
metadata:
  name: subscription-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: subscriptionservice
  ports:
  - name: subscriptionservice
    protocol: TCP
    port: 8080
    targetPort: 8080

---
# apiVersion: v1
# kind: Service
# metadata:
#   name: subscriptionservice-srv
# spec:
#   type: NodePort
#   selector:
#     app: subscriptionservice
#   ports:
#     - name: subscriptionservice
#       protocol: TCP
#       port: 8080
#       targetPort: 8080
